syntax = "proto3";

package account;

import "common.proto";

service AccountService {
    rpc createAccountAndUser (CreateAccountRequest) returns (CreateAccountResponse);
    rpc getAccount (GetAccountRequest) returns (GetAccountResponse);
    rpc updateAccount (UpdateAccountRequest) returns (UpdateAccountResponse);
    rpc deleteAccount (DeleteAccountRequest) returns (DeleteAccountResponse);
}

message UpdateAccountRequest {
    common.AccountDTO account = 1;
}

message UpdateAccountResponse {
    common.AccountDTO account = 1;
}

message DeleteAccountRequest {
    string username = 1;
}

message DeleteAccountResponse {
    // No fields required for a 200 status response
}

message CreateAccountRequest {
    string username = 1;
    string passwordHash = 2;
    string email = 3;
    string role = 4;
}

message CreateAccountResponse {
    common.AccountDTO account = 1;
}

message GetAccountRequest {
    string username = 1;
}

message GetAccountResponse {
    common.AccountDTO account = 1;
}
